# MathNet

./: .gitignore  Cargo.toml
math_net_core/: Cargo.toml
math_net_core/src/: book.rs  lib.rs
math_net_db/: Cargo.toml
math_net_db/migrations/2020-12-19-083647_create_posts/: down.sql  up.sql
math_net_db/migrations/2020-12-25-153636_create_table/: down.sql  up.sql
math_net_db/src/: lib.rs  schema.rs
math_net_db/src/models/: books.rs  posts.rs  users.rs
math_net_web/: Cargo.toml
math_net_web/src/: main.rs
math_net_web/statics/: styles.css
math_net_web/templates/: base.hbs
migrations/2020-12-15-151713_create_posts/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/models/: books.rs  posts.rs  users.rs
www/: package.json  tsconfig.json  webpack.config.js
www/src/: App.tsx  bootstrap.tsx  index.css  index.html
www/src/components/: Popular.tsx
www/src/components/Layouts/: Head.tsx
