[package]
name = "math_net_db"
version = "0.1.0"
authors = ["yk-amarly-20 <y.k.83600260@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
chrono = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
math_net_core = { path = "../math_net_core" }
