[package]
name = "math_net_web"
version = "0.1.0"
authors = ["yk-amarly-20 <y.k.83600260@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket]
version = "0.4"
features = [
  "private-cookies"
]

[dependencies.rocket_contrib]
version = "0.4"
default_features = false
features = [
  "handlebars_templates",
  "serve",
  "json",
  "diesel_postgres_pool",
  "tera_templates"
]
